Update element generator to build umbrella element